마지막 수정

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <meta name="description" content="">
     <meta name="author" content="">
-
+<meta name="apple-mobile-web-app-title" content="산청 해오름 펜션">
     <title>산청 해오름 펜션</title>
 
     <!-- Bootstrap Core CSS -->
