--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-
+<meta name="naver-site-verification" content="80491b3de6cacd7f155b720a2a1ea55ccfe6810e"/>
 <!-- Magnific Popup core CSS file -->
 <link rel="stylesheet" href="app/assets/javascripts/magnific-popup.js">
 
