--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
+<meta name="description" content="경상남도 산청군 산청읍 위치, 객실소개, 부대시설, 오시는길 연락처 제공">
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
@@ -21,6 +21,11 @@
 <!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+<meta property="og:type" content="website">
+<meta property="og:title" content="산청 해오름 펜션">
+<meta property="og:description" content="경상남도 산청군 산청읍 위치, 객실소개, 부대시설, 오시는길 연락처 제공">
+<meta property="og:image" content="http://www.schpension.com/img/logo.gif">
+<meta property="og:url" content="http://www.schpension.com/">
 <!-- Magnific Popup core JS file -->
 <script src="app/assets/stylesheets/magnific-popup.css"></script>
 
